tests/ui/fail_parameter_cant_substituted_to_argument.stderr
error: parameter can't be substituted to argument:
           in definition of trait         = < 'a, T >
           in definition of derive target = < String, String >
  --> tests/ui/fail_parameter_cant_substituted_to_argument.rs:13:40
   |
13 | #[thin_delegate::derive_delegate(Hello<String, String>)]
   |                                        ^^^^^^
